// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Reaction/> snapshot match all available animations 1`] = `
<ReactionKeys>
  <div>
    <p
      key="smile"
    >
      smile
    </p>
    <p
      key="sad"
    >
      sad
    </p>
    <p
      key="wow"
    >
      wow
    </p>
    <p
      key="haha"
    >
      haha
    </p>
    <p
      key="celebrate"
    >
      celebrate
    </p>
    <p
      key="heart"
    >
      heart
    </p>
    <p
      key="fire"
    >
      fire
    </p>
    <p
      key="speed-up"
    >
      speed-up
    </p>
    <p
      key="slow-down"
    >
      slow-down
    </p>
    <p
      key="clap-yellow"
    >
      clap-yellow
    </p>
    <p
      key="clap-light"
    >
      clap-light
    </p>
    <p
      key="clap-medium-light"
    >
      clap-medium-light
    </p>
    <p
      key="clap-medium"
    >
      clap-medium
    </p>
    <p
      key="clap-medium-dark"
    >
      clap-medium-dark
    </p>
    <p
      key="clap-dark"
    >
      clap-dark
    </p>
    <p
      key="thumb-up-yellow"
    >
      thumb-up-yellow
    </p>
    <p
      key="thumb-up-light"
    >
      thumb-up-light
    </p>
    <p
      key="thumb-up-medium-light"
    >
      thumb-up-medium-light
    </p>
    <p
      key="thumb-up-medium"
    >
      thumb-up-medium
    </p>
    <p
      key="thumb-up-medium-dark"
    >
      thumb-up-medium-dark
    </p>
    <p
      key="thumb-up-dark"
    >
      thumb-up-dark
    </p>
    <p
      key="thumb-down-yellow"
    >
      thumb-down-yellow
    </p>
    <p
      key="thumb-down-light"
    >
      thumb-down-light
    </p>
    <p
      key="thumb-down-medium-light"
    >
      thumb-down-medium-light
    </p>
    <p
      key="thumb-down-medium"
    >
      thumb-down-medium
    </p>
    <p
      key="thumb-down-medium-dark"
    >
      thumb-down-medium-dark
    </p>
    <p
      key="thumb-down-dark"
    >
      thumb-down-dark
    </p>
    <p
      key="prayer-yellow"
    >
      prayer-yellow
    </p>
    <p
      key="prayer-light"
    >
      prayer-light
    </p>
    <p
      key="prayer-medium-light"
    >
      prayer-medium-light
    </p>
    <p
      key="prayer-medium"
    >
      prayer-medium
    </p>
    <p
      key="prayer-medium-dark"
    >
      prayer-medium-dark
    </p>
    <p
      key="prayer-dark"
    >
      prayer-dark
    </p>
    <p
      key="raise-hand-yellow"
    >
      raise-hand-yellow
    </p>
    <p
      key="raise-hand-light"
    >
      raise-hand-light
    </p>
    <p
      key="raise-hand-medium-light"
    >
      raise-hand-medium-light
    </p>
    <p
      key="raise-hand-medium"
    >
      raise-hand-medium
    </p>
    <p
      key="raise-hand-medium-dark"
    >
      raise-hand-medium-dark
    </p>
    <p
      key="raise-hand-dark"
    >
      raise-hand-dark
    </p>
    <p
      key="on-video/smile"
    >
      on-video/smile
    </p>
    <p
      key="on-video/sad"
    >
      on-video/sad
    </p>
    <p
      key="on-video/wow"
    >
      on-video/wow
    </p>
    <p
      key="on-video/haha"
    >
      on-video/haha
    </p>
    <p
      key="on-video/celebrate"
    >
      on-video/celebrate
    </p>
    <p
      key="on-video/heart"
    >
      on-video/heart
    </p>
    <p
      key="on-video/fire"
    >
      on-video/fire
    </p>
    <p
      key="on-video/speed-up"
    >
      on-video/speed-up
    </p>
    <p
      key="on-video/slow-down"
    >
      on-video/slow-down
    </p>
    <p
      key="on-video/clap-yellow"
    >
      on-video/clap-yellow
    </p>
    <p
      key="on-video/clap-light"
    >
      on-video/clap-light
    </p>
    <p
      key="on-video/clap-medium-light"
    >
      on-video/clap-medium-light
    </p>
    <p
      key="on-video/clap-medium"
    >
      on-video/clap-medium
    </p>
    <p
      key="on-video/clap-medium-dark"
    >
      on-video/clap-medium-dark
    </p>
    <p
      key="on-video/clap-dark"
    >
      on-video/clap-dark
    </p>
    <p
      key="on-video/thumb-up-yellow"
    >
      on-video/thumb-up-yellow
    </p>
    <p
      key="on-video/thumb-up-light"
    >
      on-video/thumb-up-light
    </p>
    <p
      key="on-video/thumb-up-medium-light"
    >
      on-video/thumb-up-medium-light
    </p>
    <p
      key="on-video/thumb-up-medium"
    >
      on-video/thumb-up-medium
    </p>
    <p
      key="on-video/thumb-up-medium-dark"
    >
      on-video/thumb-up-medium-dark
    </p>
    <p
      key="on-video/thumb-up-dark"
    >
      on-video/thumb-up-dark
    </p>
    <p
      key="on-video/thumb-down-yellow"
    >
      on-video/thumb-down-yellow
    </p>
    <p
      key="on-video/thumb-down-light"
    >
      on-video/thumb-down-light
    </p>
    <p
      key="on-video/thumb-down-medium-light"
    >
      on-video/thumb-down-medium-light
    </p>
    <p
      key="on-video/thumb-down-medium"
    >
      on-video/thumb-down-medium
    </p>
    <p
      key="on-video/thumb-down-medium-dark"
    >
      on-video/thumb-down-medium-dark
    </p>
    <p
      key="on-video/thumb-down-dark"
    >
      on-video/thumb-down-dark
    </p>
    <p
      key="on-video/prayer-yellow"
    >
      on-video/prayer-yellow
    </p>
    <p
      key="on-video/prayer-light"
    >
      on-video/prayer-light
    </p>
    <p
      key="on-video/prayer-medium-light"
    >
      on-video/prayer-medium-light
    </p>
    <p
      key="on-video/prayer-medium"
    >
      on-video/prayer-medium
    </p>
    <p
      key="on-video/prayer-medium-dark"
    >
      on-video/prayer-medium-dark
    </p>
    <p
      key="on-video/prayer-dark"
    >
      on-video/prayer-dark
    </p>
    <p
      key="on-video/raise-hand-yellow"
    >
      on-video/raise-hand-yellow
    </p>
    <p
      key="on-video/raise-hand-light"
    >
      on-video/raise-hand-light
    </p>
    <p
      key="on-video/raise-hand-medium-light"
    >
      on-video/raise-hand-medium-light
    </p>
    <p
      key="on-video/raise-hand-medium"
    >
      on-video/raise-hand-medium
    </p>
    <p
      key="on-video/raise-hand-medium-dark"
    >
      on-video/raise-hand-medium-dark
    </p>
    <p
      key="on-video/raise-hand-dark"
    >
      on-video/raise-hand-dark
    </p>
  </div>
</ReactionKeys>
`;

exports[`<Reaction/> snapshot should match snapshot 1`] = `
<Reaction
  name="haha"
>
  <div
    className="md-reaction-wrapper"
    data-name="haha"
    data-size={12}
  />
</Reaction>
`;

exports[`<Reaction/> snapshot should match snapshot with className 1`] = `
<Reaction
  className="example-class"
  name="haha"
>
  <div
    className="example-class md-reaction-wrapper"
    data-name="haha"
    data-size={12}
  />
</Reaction>
`;

exports[`<Reaction/> snapshot should match snapshot with glyph not found if error 1`] = `
<Reaction
  name="haha"
  size={16}
>
  <div
    className="md-reaction-not-found"
    data-error="not-found:haha"
  >
    ⃞
  </div>
</Reaction>
`;

exports[`<Reaction/> snapshot should match snapshot with id 1`] = `
<Reaction
  id="example-id"
  name="haha"
>
  <div
    className="md-reaction-wrapper"
    data-name="haha"
    data-size={12}
    id="example-id"
  />
</Reaction>
`;

exports[`<Reaction/> snapshot should match snapshot with spinner while animation data is not defined 1`] = `
<Reaction
  name="haha"
  size={16}
>
  <LoadingSpinner
    scale={16}
  >
    <div
      className="md-loading-spinner-wrapper"
    >
      <Icon
        name="spinner"
        scale={16}
        weight="regular"
      >
        <div
          className="md-icon-wrapper md-icon-no-shrink"
        >
          <svg
            className=""
            data-autoscale={false}
            data-scale={16}
            data-test="spinner"
            fill="currentColor"
            height="100%"
            style={Object {}}
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
      <Icon
        className="md-loading-spinner-arch"
        name="spinner-partial"
        scale={16}
        weight="regular"
      >
        <div
          className="md-icon-wrapper md-loading-spinner-arch md-icon-no-shrink"
        >
          <svg
            className=""
            data-autoscale={false}
            data-scale={16}
            data-test="spinner-partial"
            fill="currentColor"
            height="100%"
            style={Object {}}
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
    </div>
  </LoadingSpinner>
</Reaction>
`;

exports[`<Reaction/> snapshot should match snapshot with style 1`] = `
<Reaction
  name="haha"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-reaction-wrapper"
    data-name="haha"
    data-size={12}
    style={
      Object {
        "color": "pink",
      }
    }
  />
</Reaction>
`;
